--- a/src/app/pages/bio/bio.component.html
+++ b/src/app/pages/bio/bio.component.html
@@ -17,8 +17,7 @@
     <p style="text-align: justify">
       Profesional en el área de ingeniería de sistemas, con experiencia en el de
       desarrollo de software y tecnología de la información, experiencia
-      ocupando cargos de desarrollador de software, analista de sistemas y
-      soporte técnico. Completamente orientado a resultados, con capacidad para
+      ocupando cargos de desarrollador de software y analista de sistemas. Completamente orientado a resultados, con capacidad para
       trabajar en equipo y experiencia en la implementación de sistemas y
       soluciones tecnológicas.
     </p>
