--- a/src/app/pages/bio/bio.component.html
+++ b/src/app/pages/bio/bio.component.html
@@ -1,8 +1,8 @@
 <div class="ae-container-fluid ae-container-fluid--inner rk-main">
-  <div class="ae-grid au-xs-ta-center au-mb-4">
-    <div class="ae-grid__item item-lg-12 ae-kappa au-mb-3">
-      <img src="assets/img/fotoPersonal.jpg" alt="" class="au-mb-3" />
-      <h2 class="ae-u-bolder au-mt-2">Luis Galicia</h2>
+  <div class="ae-grid au-xs-ta-center">
+    <div class="ae-grid__item item-lg-12 ae-kappa au-mt-3">
+      <img src="assets/img/fotoPersonal.png" alt="" width="200" />
+      <h2 class="ae-u-bolder">Luis Galicia</h2>
       <h4 class="ae-u-bolder au-mb-3">Ingeniero de Sistemas</h4>
       <h4 class="au-lg-ta au-mb-3 au-pl-4 au-pr-4">
         Analista de sistemas y base de datos, desarrollador web, desarrollador
@@ -13,33 +13,34 @@
   </div>
 
   <div class="ae-grid__item item-lg-8 item-lg--offset-2">
-    <h4 class="ae-u-bolder">Desarrollador Full-Stack</h4>
-    <p style="text-align: justify">
+    <h4 class="ae-u-bolder m-b-10">Desarrollador Full Stack</h4>
+    <p class="t-j">
       Profesional en el área de ingeniería de sistemas, con experiencia en el de
       desarrollo de software y tecnología de la información, experiencia
-      ocupando cargos de desarrollador de software y analista de sistemas. Completamente orientado a resultados, con capacidad para
-      trabajar en equipo y experiencia en la implementación de sistemas y
-      soluciones tecnológicas.
+      ocupando cargos de desarrollador de software y analista de sistemas.
+      Completamente orientado a resultados, con capacidad para trabajar en
+      equipo y experiencia en la implementación de sistemas y soluciones
+      tecnológicas.
     </p>
   </div>
 
-  <div class="ae-grid ae-grid--alt au-xs-ptp-1 ae-grid__item">
+  <div class="ae-grid ae-grid--alt ae-grid__item p-t-15">
     <div class="ae-grid__item--alt item-lg-4">
       <h6 class="ae-u-boldest">Intereses</h6>
-      <p style="text-align: justify" class="au-lh-3">
+      <p class="au-lh-3 t-j">
         Tecnología de la información, educación, economía, cultura y deporte.
       </p>
     </div>
     <div class="ae-grid__item--alt item-lg-4">
       <h6 class="ae-u-boldest">Pasatiempos</h6>
-      <p style="text-align: justify" class="au-lh-3">
+      <p class="au-lh-3 t-j">
         Compartir en familia, Futbol. <br />Video juegos: COD War Zone, League
         of Legends, Lineage 2
       </p>
     </div>
     <div class="ae-grid__item--alt item-lg-4">
       <h6 class="ae-u-boldest">Perspectivas y Clientes</h6>
-      <p style="text-align: justify" class="au-lh-3">
+      <p class="au-lh-3 t-j">
         Ofrecer soluciones tecnológicas y de transformación digital que
         contribuyan en el desarrollo empresarial y la optimización de procesos
         para facilitar la toma de decisiones. Tener en la manera de lo posible
